Test/hofs/Types.dfy.expect
Types.dfy(9,20): Error: arguments must have comparable types (got A -> A -> A and (A -> A) -> A)
Types.dfy(14,20): Error: arguments must have comparable types (got (A -> A) -> A and A -> A -> A)
Types.dfy(18,20): Error: arguments must have comparable types (got A -> A -> A and (A -> A) -> A)
3 resolution/type errors detected in Types.dfy
